--- a/SentenceComparator.ipynb
+++ b/SentenceComparator.ipynb
@@ -2002,17 +2002,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [],
-   "source": [],
+   "execution_count": null,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Server running on port 8000\n",
+      "Selected Response: HI\n",
+      "Input sentence: hi\n",
+      "Most tag: CALL\n",
+      "Most similar response: HI\n",
+      "subject response: HOST\n",
+      "similarity: tensor([[1.]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [25/Dec/2023 09:13:23] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected Response: Hello\n",
+      "Input sentence: hi\n",
+      "Most tag: CALL_BACK\n",
+      "Most similar response: Hi\n",
+      "subject response: BOT001\n",
+      "similarity: tensor([[0.6686]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [25/Dec/2023 09:13:26] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected Response: 😂\n",
+      "Input sentence: hi\n",
+      "Most tag: BE_GOOD\n",
+      "Most similar response: 😂\n",
+      "subject response: BOT001\n",
+      "similarity: tensor([[0.6369]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [25/Dec/2023 09:13:27] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "from http.server import BaseHTTPRequestHandler, HTTPServer\n",
+    "from sentence_transformers import SentenceTransformer, util\n",
+    "import mysql.connector\n",
+    "import json\n",
+    "import torch\n",
+    "\n",
+    "def connect_to_database():\n",
+    "    connection = mysql.connector.connect(\n",
+    "        host=\"localhost\",\n",
+    "        user=\"root\",\n",
+    "        password=\"3659215fF\",\n",
+    "        database=\"handle_together\"\n",
+    "    )\n",
+    "    return connection\n",
+    "\n",
+    "def send_json_response(self, status_code, data):\n",
+    "    # Convert status_code to integer\n",
+    "    status_code = int(status_code)\n",
+    "\n",
+    "    # Set up the HTTP response\n",
+    "    self.send_response(status_code)\n",
+    "    self.send_header(\"Content-type\", \"application/json\")\n",
+    "    self.end_headers()\n",
+    "\n",
+    "    # Convert the data to JSON\n",
+    "    json_response = json.dumps(data)\n",
+    "\n",
+    "    # Send the JSON response\n",
+    "    self.wfile.write(json_response.encode('utf-8'))\n",
+    "\n",
+    "class WebServerHandler(BaseHTTPRequestHandler):\n",
+    "\n",
+    "    def do_POST(self):       \n",
+    "        # Read the content length from the request headers\n",
+    "        content_length = int(self.headers['Content-Length'])\n",
+    "\n",
+    "        # Read the JSON data from the request body\n",
+    "        post_data = self.rfile.read(content_length)\n",
+    "        json_data_list = json.loads(post_data.decode('utf-8'))\n",
+    "\n",
+    "        if json_data_list:\n",
+    "            json_data = json_data_list[0]\n",
+    "            # Now json_data contains the parameters sent in the JSON format\n",
+    "            tag_array = json_data.get('tag_array', [])\n",
+    "            subject_array = json_data.get('subject_array', [])\n",
+    "            object_array = json_data.get('object_array', [])\n",
+    "            input_sentence = json_data.get('input_sentence', '')       \n",
+    "            public_ind = json_data.get('public_ind', '')\n",
+    "            command_ind = json_data.get('command_ind', '')\n",
+    "\n",
+    "        # Load the Sentence Transformer model\n",
+    "        model = SentenceTransformer(\"shibing624/text2vec-base-chinese\")\n",
+    "\n",
+    "        # Fetch distinct subject codes from intent_type table\n",
+    "        connection = connect_to_database()\n",
+    "        cursor = connection.cursor()\n",
+    "\n",
+    "        # Use parameterized query to avoid SQL injection\n",
+    "        # query = \"SELECT tag, content FROM intent_training_data WHERE tag IN ({}) AND subject IN ({})\".format(','.join(['%s' for  in tag_array]), ','.join(['%s' for  in subject_array]))\n",
+    "        if tag_array and any(tag_array):\n",
+    "            tag_condition = \"tag IN ({})\".format(','.join(['%s' for _ in tag_array]))\n",
+    "        else:\n",
+    "            tag_condition = \"1=1\"  # Always true if tag_array is empty or None\n",
+    "            \n",
+    "        if command_ind: \n",
+    "            tag_condition2 = \"AND COMMAND_IND = '\"+command_ind+\"'\"\n",
+    "        else:\n",
+    "            tag_condition2 = \"\" \n",
+    "        \n",
+    "        query = (\"SELECT tag, content, subject FROM intent_training_data WHERE {} AND subject IN ({}) AND object IN ({}) AND PUBLIC_IND = '\"+public_ind+\"'\"+tag_condition2).format(tag_condition, ','.join(['%s' for _ in subject_array]) ,','.join(['%s' for _ in object_array]))\n",
+    "        params = tag_array + subject_array + object_array\n",
+    "        cursor.execute(query, params)\n",
+    "        rows = cursor.fetchall()\n",
+    "        candidate_responses_tags = [row[0] for row in rows]\n",
+    "        candidate_responses = [row[1] for row in rows]\n",
+    "        candidate_responses_subject = [row[2] for row in rows]\n",
+    "        # for row in rows:\n",
+    "        #     print(row)\n",
+    "        # print(\"SQL Query:\", query)\n",
+    "        # print(\"Parameters:\", params)\n",
+    "        cursor.close()\n",
+    "        connection.close()\n",
+    "\n",
+    "        # Encode input sentence and candidate responses\n",
+    "        input_embedding = model.encode([input_sentence])\n",
+    "        response_embedding = model.encode([candidate_responses])\n",
+    "\n",
+    "        response_embeddings = model.encode(candidate_responses)\n",
+    "\n",
+    "        # Calculate cosine similarity between input and responses\n",
+    "        similarities = util.pytorch_cos_sim(input_embedding, response_embeddings)[0]\n",
+    "        \n",
+    "        most_similar_index = similarities.argmax().item()\n",
+    "        top_n_indices = torch.argsort(similarities, descending=True)[:5]\n",
+    "\n",
+    "        # Randomly select 1 response from the top 5\n",
+    "        selected_index = random.choice(top_n_indices)\n",
+    "        selected_response_tag = candidate_responses_tags[selected_index]\n",
+    "        selected_response = candidate_responses[selected_index]\n",
+    "        selected_response_embedding= model.encode([selected_response])\n",
+    "        similarity = util.pytorch_cos_sim(input_embedding, selected_response_embedding)\n",
+    "\n",
+    "        # Print the selected response\n",
+    "        print(\"Selected Response:\", selected_response)\n",
+    "        # Print the most similar response\n",
+    "        print(\"Input sentence:\", input_sentence)\n",
+    "        print(\"Most tag:\", candidate_responses_tags[most_similar_index])\n",
+    "        print(\"Most similar response:\", candidate_responses[most_similar_index])\n",
+    "        print(\"subject response:\", candidate_responses_subject[most_similar_index])\n",
+    "        \n",
+    "        print(\"similarity:\",similarity)\n",
+    "        result = {\n",
+    "            \"input_sentence\": input_sentence,\n",
+    "            \"tag\": candidate_responses_tags[most_similar_index],\n",
+    "            \"content\": selected_response,\n",
+    "            \"similarity\" : round(similarity.item(),5),\n",
+    "            \"subject\" : candidate_responses_subject[most_similar_index]\n",
+    "        }\n",
+    "        send_json_response(self, '200', result)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    try:\n",
+    "        port = 8000\n",
+    "        server = HTTPServer(('localhost', port), WebServerHandler)\n",
+    "        server.max_body_length = 10 * 1024 * 1024  # set to 10 MB\n",
+    "\n",
+    "        print(f'Server running on port {port}')\n",
+    "        \n",
+    "        server.serve_forever()\n",
+    "    except KeyboardInterrupt:\n",
+    "        print('^C received, shutting down server')\n",
+    "        server.socket.close()"
+   ],
    "metadata": {
     "collapsed": false,
+    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2023-12-20T07:11:21.647489Z",
-     "start_time": "2023-12-20T07:11:21.458971Z"
+     "start_time": "2023-12-25T01:11:57.675154Z"
     }
    },
    "id": "a919bc16ba1fd336"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "3ff4c86fac23bdc5"
   }
  ],
  "metadata": {
