--- a/Intent Data Collector.ipynb
+++ b/Intent Data Collector.ipynb
@@ -812,7 +812,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-12-27 10:54:11.443 python[81613:2555259] TSM AdjustCapsLockLEDForKeyTransitionHandling - _ISSetPhysicalKeyboardCapsLockLED Inhibit\n"
+     ]
+    }
+   ],
    "source": [
     "import tkinter as tk\n",
     "from tkinter import ttk\n",
@@ -995,7 +1003,7 @@
     "collapsed": false,
     "is_executing": true,
     "ExecuteTime": {
-     "start_time": "2023-12-25T06:22:47.383151Z"
+     "start_time": "2023-12-27T02:53:40.331108Z"
     }
    },
    "id": "912c16774ac0229a"
