--- a/SentenceComparator.ipynb
+++ b/SentenceComparator.ipynb
@@ -2189,530 +2189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Server running on port 8000\n",
-      "Selected Response: Your age in a sentence?\n",
-      "\n",
-      "Input sentence: how old are you\n",
-      "Most tag: ASK_INFO\n",
-      "Most similar response: how old\n",
-      "subject response: BOT001\n",
-      "similarity: tensor([[0.7128]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 16:59:29] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: high school\n",
-      "Input sentence: how old are you\n",
-      "Most tag: ANS_INFO\n",
-      "Most similar response: 17 years old\n",
-      "subject response: BOT_STREET_BOY\n",
-      "similarity: tensor([[0.2221]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 16:59:31] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: Briefly, tell me about your education.\n",
-      "\n",
-      "Input sentence: In a nutshell, your education?\n",
-      "Most tag: ASK_INFO\n",
-      "Most similar response: In a nutshell, your education?\n",
-      "\n",
-      "subject response: HOST\n",
-      "similarity: tensor([[0.7897]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:00:13] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: senior high \n",
-      "Input sentence: In a nutshell, your education?\n",
-      "Most tag: ANS_INFO\n",
-      "Most similar response: high school\n",
-      "subject response: BOT_STREET_BOY\n",
-      "similarity: tensor([[0.3106]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:00:15] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: Briefly, tell me about your education.\n",
-      "\n",
-      "Input sentence: In a nutshell, your education?\n",
-      "Most tag: ASK_INFO\n",
-      "Most similar response: In a nutshell, your education?\n",
-      "\n",
-      "subject response: HOST\n",
-      "similarity: tensor([[0.7897]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:00:23] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: it's a secret\n",
-      "Input sentence: In a nutshell, your education?\n",
-      "Most tag: ANS_INFO\n",
-      "Most similar response: high school\n",
-      "subject response: BOT_STREET_BOY\n",
-      "similarity: tensor([[0.2099]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:00:25] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: What's your educational background in a sentence?\n",
-      "\n",
-      "Input sentence: In a nutshell, your education?\n",
-      "Most tag: ASK_INFO\n",
-      "Most similar response: In a nutshell, your education?\n",
-      "\n",
-      "subject response: HOST\n",
-      "similarity: tensor([[0.6029]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:00:29] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: it's a secret\n",
-      "Input sentence: In a nutshell, your education?\n",
-      "Most tag: ANS_INFO\n",
-      "Most similar response: high school\n",
-      "subject response: BOT_STREET_BOY\n",
-      "similarity: tensor([[0.2099]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:00:30] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: In a nutshell, your education?\n",
-      "\n",
-      "Input sentence: In a nutshell, your education?\n",
-      "Most tag: ASK_INFO\n",
-      "Most similar response: In a nutshell, your education?\n",
-      "\n",
-      "subject response: HOST\n",
-      "similarity: tensor([[1.]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:00:35] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: high school\n",
-      "Input sentence: In a nutshell, your education?\n",
-      "Most tag: ANS_INFO\n",
-      "Most similar response: high school\n",
-      "subject response: BOT_STREET_BOY\n",
-      "similarity: tensor([[0.4368]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:00:36] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: Can you sum up your education for me?\n",
-      "\n",
-      "Input sentence: In a nutshell, your education?\n",
-      "Most tag: ASK_INFO\n",
-      "Most similar response: In a nutshell, your education?\n",
-      "\n",
-      "subject response: HOST\n",
-      "similarity: tensor([[0.7254]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:00:40] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: it's secret\n",
-      "Input sentence: In a nutshell, your education?\n",
-      "Most tag: ANS_INFO\n",
-      "Most similar response: high school\n",
-      "subject response: BOT_STREET_BOY\n",
-      "similarity: tensor([[0.2097]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:00:41] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: What's your educational background in a sentence?\n",
-      "\n",
-      "Input sentence: In a nutshell, your education?\n",
-      "Most tag: ASK_INFO\n",
-      "Most similar response: In a nutshell, your education?\n",
-      "\n",
-      "subject response: HOST\n",
-      "similarity: tensor([[0.6029]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:00:44] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: it's a secret\n",
-      "Input sentence: In a nutshell, your education?\n",
-      "Most tag: ANS_INFO\n",
-      "Most similar response: high school\n",
-      "subject response: BOT_STREET_BOY\n",
-      "similarity: tensor([[0.2099]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:00:46] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: Can you sum up your education for me?\n",
-      "\n",
-      "Input sentence: In a nutshell, your education?\n",
-      "Most tag: ASK_INFO\n",
-      "Most similar response: In a nutshell, your education?\n",
-      "\n",
-      "subject response: HOST\n",
-      "similarity: tensor([[0.7254]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:00:50] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: it's a secret\n",
-      "Input sentence: In a nutshell, your education?\n",
-      "Most tag: ANS_INFO\n",
-      "Most similar response: high school\n",
-      "subject response: BOT_STREET_BOY\n",
-      "similarity: tensor([[0.2099]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:00:51] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: What's your educational background in a sentence?\n",
-      "\n",
-      "Input sentence: In a nutshell, your education?\n",
-      "Most tag: ASK_INFO\n",
-      "Most similar response: In a nutshell, your education?\n",
-      "\n",
-      "subject response: HOST\n",
-      "similarity: tensor([[0.6029]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:37:53] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: it's a secret\n",
-      "Input sentence: In a nutshell, your education?\n",
-      "Most tag: ANS_INFO\n",
-      "Most similar response: high school\n",
-      "subject response: BOT_STREET_BOY\n",
-      "similarity: tensor([[0.2099]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:37:54] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: In a nutshell, your education?\n",
-      "\n",
-      "Input sentence: In a nutshell, your education?\n",
-      "Most tag: ASK_INFO\n",
-      "Most similar response: In a nutshell, your education?\n",
-      "\n",
-      "subject response: HOST\n",
-      "similarity: tensor([[1.]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:38:01] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: it's a secret\n",
-      "Input sentence: In a nutshell, your education?\n",
-      "Most tag: ANS_INFO\n",
-      "Most similar response: high school\n",
-      "subject response: BOT_STREET_BOY\n",
-      "similarity: tensor([[0.2099]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:38:02] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: Briefly, tell me about your education.\n",
-      "\n",
-      "Input sentence: In a nutshell, your education?\n",
-      "Most tag: ASK_INFO\n",
-      "Most similar response: In a nutshell, your education?\n",
-      "\n",
-      "subject response: HOST\n",
-      "similarity: tensor([[0.7897]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:38:09] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: senior high \n",
-      "Input sentence: In a nutshell, your education?\n",
-      "Most tag: ANS_INFO\n",
-      "Most similar response: high school\n",
-      "subject response: BOT_STREET_BOY\n",
-      "similarity: tensor([[0.3106]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:38:10] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: Hi\n",
-      "Input sentence: hi\n",
-      "Most tag: CALL\n",
-      "Most similar response: Hi\n",
-      "subject response: BOT001\n",
-      "similarity: tensor([[1.]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:48:16] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: 'Ello!\n",
-      "Input sentence: hi\n",
-      "Most tag: CALL_BACK\n",
-      "Most similar response: Hey there!\n",
-      "subject response: BOT_STREET_BOY\n",
-      "similarity: tensor([[0.2818]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:48:17] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: 🚀\n",
-      "Input sentence: hi\n",
-      "Most tag: BE_GOOD\n",
-      "Most similar response: 🤙 \n",
-      "subject response: BOT_STREET_BOY\n",
-      "similarity: tensor([[0.4353]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:48:18] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Response: Let's see some action.\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Input sentence: what do you want to see\n",
-      "Most tag: ASK_HOW_TO_PLAY\n",
-      "Most similar response: What do you want to see tonight?\n",
-      "subject response: HOST\n",
-      "similarity: tensor([[0.4729]])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [27/Dec/2023 17:48:35] \"POST / HTTP/1.1\" 200 -\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "from http.server import BaseHTTPRequestHandler, HTTPServer\n",
@@ -2852,10 +2329,7 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
-    "ExecuteTime": {
-     "start_time": "2023-12-27T08:58:45.633327Z"
-    }
+    "is_executing": true
    },
    "id": "a919bc16ba1fd336"
   },
