--- a/Intent Data Collector.ipynb
+++ b/Intent Data Collector.ipynb
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
@@ -993,12 +993,216 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
+     "end_time": "2023-12-27T09:51:48.343653Z",
      "start_time": "2023-12-27T07:07:31.454830Z"
     }
    },
    "id": "912c16774ac0229a"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[8], line 176\u001B[0m\n\u001B[1;32m    173\u001B[0m add_button\u001B[38;5;241m.\u001B[39mpack()\n\u001B[1;32m    175\u001B[0m \u001B[38;5;66;03m# Start the main event loop\u001B[39;00m\n\u001B[0;32m--> 176\u001B[0m \u001B[43mroot\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmainloop\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m~/anaconda3/lib/python3.10/tkinter/__init__.py:1458\u001B[0m, in \u001B[0;36mMisc.mainloop\u001B[0;34m(self, n)\u001B[0m\n\u001B[1;32m   1456\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mmainloop\u001B[39m(\u001B[38;5;28mself\u001B[39m, n\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0\u001B[39m):\n\u001B[1;32m   1457\u001B[0m     \u001B[38;5;124;03m\"\"\"Call the mainloop of Tk.\"\"\"\u001B[39;00m\n\u001B[0;32m-> 1458\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtk\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmainloop\u001B[49m\u001B[43m(\u001B[49m\u001B[43mn\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import ttk\n",
+    "import mysql.connector\n",
+    "\n",
+    "def connect_to_database():\n",
+    "    # Modify the database connection details as needed\n",
+    "    connection = mysql.connector.connect(\n",
+    "        host=\"localhost\",\n",
+    "        user=\"root\",\n",
+    "        password=\"3659215fF\",\n",
+    "        database=\"handle_together\"\n",
+    "    )\n",
+    "    return connection\n",
+    "\n",
+    "# Define content_entry, command_checkbox, and public_checkbox as global variables\n",
+    "content_entry = None\n",
+    "command_checkbox = None\n",
+    "public_checkbox = None\n",
+    "\n",
+    "def add_data():\n",
+    "    # Add data to the database based on user input\n",
+    "    subject = selected_subject.get()\n",
+    "    intent_type = selected_intent_type.get()\n",
+    "    object_type = selected_object_type.get()\n",
+    "\n",
+    "    # Check if content_entry exists\n",
+    "    if content_entry:\n",
+    "        content = content_entry.get()\n",
+    "    else:\n",
+    "        content = None\n",
+    "\n",
+    "    # Check if checkboxes are selected\n",
+    "    command_ind = 'Y' if command_checkbox.get() else 'N'\n",
+    "    public_ind = 'Y' if public_checkbox.get() else 'N'\n",
+    "\n",
+    "    if not content:\n",
+    "        print(\"Content is missing. Please enter content.\")\n",
+    "        return\n",
+    "\n",
+    "    connection = connect_to_database()\n",
+    "    cursor = connection.cursor()\n",
+    "\n",
+    "    # Insert the data into the intent_training_data table\n",
+    "    query = \"INSERT INTO intent_training_data (subject, object, tag, content, command_ind, public_ind, active_ind) VALUES (%s, %s, %s, %s, %s, %s, 'Y')\"\n",
+    "    data = (subject, object_type, intent_type, content, command_ind, public_ind)\n",
+    "\n",
+    "    cursor.execute(query, data)\n",
+    "    connection.commit()\n",
+    "\n",
+    "    cursor.close()\n",
+    "    connection.close()\n",
+    "\n",
+    "    # Show confirmation message for 2 seconds\n",
+    "    confirmation_label.config(text=\"Data saved successfully!\")\n",
+    "    root.after(2000, clear_confirmation_message)\n",
+    "\n",
+    "def clear_confirmation_message():\n",
+    "    # Clear the confirmation message\n",
+    "    confirmation_label.config(text=\"\")\n",
+    "\n",
+    "def update_radio_buttons():\n",
+    "    # Update radio buttons based on the selected subject\n",
+    "    subject = selected_subject.get()\n",
+    "    connection = connect_to_database()\n",
+    "    cursor = connection.cursor()\n",
+    "    cursor.execute(\"SELECT intent_type FROM intent_type\")\n",
+    "    intent_types = [row[0] for row in cursor.fetchall()]\n",
+    "    cursor.close()\n",
+    "    connection.close()\n",
+    "\n",
+    "    # Clear the existing frame\n",
+    "    for widget in radio_frame.winfo_children():\n",
+    "        widget.destroy()\n",
+    "\n",
+    "    # Create a scrollable frame for radio buttons\n",
+    "    scrollable_frame = tk.Frame(radio_frame)\n",
+    "    scrollable_frame.pack(side=tk.LEFT, fill=tk.Y)\n",
+    "\n",
+    "    # Create a canvas to hold the frame and add a scrollbar\n",
+    "    canvas = tk.Canvas(scrollable_frame, height=150)  # Set the height as needed\n",
+    "    scrollbar = tk.Scrollbar(scrollable_frame, command=canvas.yview)\n",
+    "    canvas.pack(side=tk.LEFT, fill=tk.Y)\n",
+    "    scrollbar.pack(side=tk.RIGHT, fill=tk.Y)\n",
+    "    canvas.configure(yscrollcommand=scrollbar.set)\n",
+    "\n",
+    "    # Create a frame to hold radio buttons inside the canvas\n",
+    "    inner_frame = tk.Frame(canvas)\n",
+    "    canvas.create_window((0, 0), window=inner_frame, anchor=tk.NW)\n",
+    "\n",
+    "    # Create radio buttons in the inner frame\n",
+    "    for intent_type in intent_types:\n",
+    "        tk.Radiobutton(inner_frame, text=intent_type, variable=selected_intent_type, value=intent_type, font=(\"Helvetica\", 14)).pack()\n",
+    "\n",
+    "    # Update the scroll region of the canvas\n",
+    "    inner_frame.update_idletasks()\n",
+    "    canvas.config(scrollregion=canvas.bbox(\"all\"))\n",
+    "\n",
+    "def open_add_frame():\n",
+    "    global selected_subject, selected_intent_type, selected_object_type, radio_frame, content_entry, command_checkbox, public_checkbox, confirmation_label\n",
+    "\n",
+    "    add_window = tk.Toplevel(root)\n",
+    "    add_window.title(\"Add Data\")\n",
+    "\n",
+    "    # Create and configure widgets for the Add Data frame\n",
+    "    add_label = tk.Label(add_window, text=\"Add Data\", font=(\"Helvetica\", 16))\n",
+    "    add_label.pack()\n",
+    "\n",
+    "    # Fetch distinct subject codes from intent_type table\n",
+    "    connection = connect_to_database()\n",
+    "    cursor = connection.cursor()\n",
+    "    cursor.execute(\"SELECT distinct subject FROM intent_training_data union SELECT distinct object subject FROM intent_training_data\")\n",
+    "    subject_codes = [row[0] for row in cursor.fetchall()]\n",
+    "    cursor.close()\n",
+    "    connection.close()\n",
+    "\n",
+    "    # Create variables to store the selected subject code and object type\n",
+    "    selected_subject = tk.StringVar()\n",
+    "    selected_object_type = tk.StringVar()\n",
+    "\n",
+    "    # Create a label and dropdown menu to select a subject code\n",
+    "    subject_label = tk.Label(add_window, text=\"Select Subject Code:\", font=(\"Helvetica\", 14))\n",
+    "    subject_label.pack()\n",
+    "    subject_dropdown = tk.OptionMenu(add_window, selected_subject, *subject_codes)\n",
+    "    subject_dropdown.pack()\n",
+    "\n",
+    "    # Create a frame to hold the radio buttons\n",
+    "    radio_frame = tk.Frame(add_window)\n",
+    "    radio_frame.pack()\n",
+    "\n",
+    "    # Create a variable to store the selected intent type\n",
+    "    selected_intent_type = tk.StringVar()\n",
+    "\n",
+    "    # Create a label and dropdown menu to select an object type\n",
+    "    object_label = tk.Label(add_window, text=\"Select Object Type:\", font=(\"Helvetica\", 14))\n",
+    "    object_label.pack()\n",
+    "    object_dropdown = tk.OptionMenu(add_window, selected_object_type, *subject_codes)\n",
+    "    object_dropdown.pack()\n",
+    "\n",
+    "    # Create a button to fetch and show intent types based on the selected subject code\n",
+    "    show_intent_types_button = tk.Button(add_window, text=\"Show Intent Types\", command=update_radio_buttons, font=(\"Helvetica\", 14))\n",
+    "    show_intent_types_button.pack()\n",
+    "\n",
+    "    # Create an entry for content with a larger size and font\n",
+    "    content_label = tk.Label(add_window, text=\"Content:\", font=(\"Helvetica\", 14))\n",
+    "    content_label.pack()\n",
+    "    content_entry = tk.Entry(add_window, font=(\"Helvetica\", 16), width=40)\n",
+    "    content_entry.pack()\n",
+    "\n",
+    "    # Create checkboxes for command_ind and public_ind\n",
+    "    command_checkbox = tk.BooleanVar()\n",
+    "    public_checkbox = tk.BooleanVar()\n",
+    "\n",
+    "    command_checkbox_label = tk.Checkbutton(add_window, text=\"Command Indicator\", variable=command_checkbox, font=(\"Helvetica\", 14))\n",
+    "    command_checkbox_label.pack()\n",
+    "\n",
+    "    public_checkbox_label = tk.Checkbutton(add_window, text=\"Public Indicator\", variable=public_checkbox, font=(\"Helvetica\", 14))\n",
+    "    public_checkbox_label.pack()\n",
+    "\n",
+    "    # Create a label for displaying confirmation message\n",
+    "    confirmation_label = tk.Label(add_window, text=\"\", font=(\"Helvetica\", 14), fg=\"green\")\n",
+    "    confirmation_label.pack()\n",
+    "\n",
+    "    # Create a button to save the data\n",
+    "    save_button = tk.Button(add_window, text=\"Save\", command=add_data, font=(\"Helvetica\", 14))\n",
+    "    save_button.pack()\n",
+    "\n",
+    "# Initialize the main application window\n",
+    "root = tk.Tk()\n",
+    "root.title(\"Data Management\")\n",
+    "\n",
+    "# Create a button to open the \"Add Data\" frame\n",
+    "add_button = tk.Button(root, text=\"Add\", command=open_add_frame, font=(\"Helvetica\", 14))\n",
+    "add_button.pack()\n",
+    "\n",
+    "# Start the main event loop\n",
+    "root.mainloop()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-28T05:24:35.119727Z",
+     "start_time": "2023-12-28T02:54:19.508763Z"
+    }
+   },
+   "id": "faa7c6d3576dadeb"
   },
   {
    "cell_type": "code",
@@ -1008,7 +1212,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "faa7c6d3576dadeb"
+   "id": "1a277dbf32e8cc4b"
   }
  ],
  "metadata": {
