--- a/Intent Data Collector.ipynb
+++ b/Intent Data Collector.ipynb
@@ -5,13 +5,35 @@
    "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-12-19T05:55:54.287077Z",
-     "start_time": "2023-12-19T05:55:51.613756Z"
-    }
+     "end_time": "2024-03-05T03:39:44.393798Z",
+     "start_time": "2024-03-05T03:39:34.151353Z"
+    },
+    "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/johnny/anaconda3/lib/python3.10/tkinter/__init__.py\", line 1921, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"/var/folders/8s/9fh2s7w53w1fks_4dpp52tyw0000gn/T/ipykernel_6227/1445578185.py\", line 74, in open_add_frame\n",
+      "    cursor.execute(\"SELECT DISTINCT subject_code FROM intent_type\")\n",
+      "  File \"/Users/johnny/anaconda3/lib/python3.10/site-packages/mysql/connector/cursor.py\", line 617, in execute\n",
+      "    self._handle_result(self._connection.cmd_query(stmt))\n",
+      "  File \"/Users/johnny/anaconda3/lib/python3.10/site-packages/mysql/connector/opentelemetry/context_propagation.py\", line 77, in wrapper\n",
+      "    return method(cnx, *args, **kwargs)\n",
+      "  File \"/Users/johnny/anaconda3/lib/python3.10/site-packages/mysql/connector/connection.py\", line 1069, in cmd_query\n",
+      "    result = self._handle_result(self._send_cmd(ServerCmd.QUERY, query))\n",
+      "  File \"/Users/johnny/anaconda3/lib/python3.10/site-packages/mysql/connector/connection.py\", line 846, in _handle_result\n",
+      "    raise get_exception(packet)\n",
+      "mysql.connector.errors.ProgrammingError: 1054 (42S22): Unknown column 'subject_code' in 'field list'\n"
+     ]
+    }
+   ],
    "source": [
     "import tkinter as tk\n",
     "import mysql.connector\n",
@@ -136,6 +158,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "794e8015eddf9026",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
@@ -275,26 +299,29 @@
     "\n",
     "# Start the main event loop\n",
     "root.mainloop()\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "794e8015eddf9026"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "fb0f32e8019ad5be",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-14T08:57:34.885173Z",
+     "start_time": "2023-12-14T08:56:31.630671Z"
+    }
+   },
    "outputs": [
     {
      "ename": "KeyboardInterrupt",
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[4], line 176\u001B[0m\n\u001B[1;32m    173\u001B[0m add_button\u001B[38;5;241m.\u001B[39mpack()\n\u001B[1;32m    175\u001B[0m \u001B[38;5;66;03m# Start the main event loop\u001B[39;00m\n\u001B[0;32m--> 176\u001B[0m \u001B[43mroot\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmainloop\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/anaconda3/lib/python3.10/tkinter/__init__.py:1458\u001B[0m, in \u001B[0;36mMisc.mainloop\u001B[0;34m(self, n)\u001B[0m\n\u001B[1;32m   1456\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mmainloop\u001B[39m(\u001B[38;5;28mself\u001B[39m, n\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0\u001B[39m):\n\u001B[1;32m   1457\u001B[0m     \u001B[38;5;124;03m\"\"\"Call the mainloop of Tk.\"\"\"\u001B[39;00m\n\u001B[0;32m-> 1458\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtk\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmainloop\u001B[49m\u001B[43m(\u001B[49m\u001B[43mn\u001B[49m\u001B[43m)\u001B[49m\n",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 176\u001b[0m\n\u001b[1;32m    173\u001b[0m add_button\u001b[38;5;241m.\u001b[39mpack()\n\u001b[1;32m    175\u001b[0m \u001b[38;5;66;03m# Start the main event loop\u001b[39;00m\n\u001b[0;32m--> 176\u001b[0m \u001b[43mroot\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmainloop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.10/tkinter/__init__.py:1458\u001b[0m, in \u001b[0;36mMisc.mainloop\u001b[0;34m(self, n)\u001b[0m\n\u001b[1;32m   1456\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmainloop\u001b[39m(\u001b[38;5;28mself\u001b[39m, n\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m):\n\u001b[1;32m   1457\u001b[0m     \u001b[38;5;124;03m\"\"\"Call the mainloop of Tk.\"\"\"\u001b[39;00m\n\u001b[0;32m-> 1458\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtk\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmainloop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -439,19 +466,15 @@
     "\n",
     "# Start the main event loop\n",
     "root.mainloop()\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-14T08:57:34.885173Z",
-     "start_time": "2023-12-14T08:56:31.630671Z"
-    }
-   },
-   "id": "fb0f32e8019ad5be"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "31f6cfbd199d582",
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
@@ -608,26 +631,26 @@
     "\n",
     "# Start the main event loop\n",
     "root.mainloop()\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "is_executing": true
-   },
-   "id": "31f6cfbd199d582"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "39480c0002110457",
+   "metadata": {},
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "39480c0002110457"
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "d7c979463eaea4e0",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-18T03:05:17.846022Z",
+     "start_time": "2023-12-18T02:59:14.218805Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -799,19 +822,18 @@
     "\n",
     "# Start the main event loop\n",
     "root.mainloop()\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-18T03:05:17.846022Z",
-     "start_time": "2023-12-18T02:59:14.218805Z"
-    }
-   },
-   "id": "d7c979463eaea4e0"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "912c16774ac0229a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-27T09:51:48.343653Z",
+     "start_time": "2023-12-27T07:07:31.454830Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
@@ -990,30 +1012,24 @@
     "\n",
     "# Start the main event loop\n",
     "root.mainloop()\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-27T09:51:48.343653Z",
-     "start_time": "2023-12-27T07:07:31.454830Z"
-    }
-   },
-   "id": "912c16774ac0229a"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
+   "id": "faa7c6d3576dadeb",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-28T08:51:05.015965Z",
+     "start_time": "2023-12-28T08:42:19.715395Z"
+    }
+   },
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[8], line 176\u001B[0m\n\u001B[1;32m    173\u001B[0m add_button\u001B[38;5;241m.\u001B[39mpack()\n\u001B[1;32m    175\u001B[0m \u001B[38;5;66;03m# Start the main event loop\u001B[39;00m\n\u001B[0;32m--> 176\u001B[0m \u001B[43mroot\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmainloop\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/anaconda3/lib/python3.10/tkinter/__init__.py:1458\u001B[0m, in \u001B[0;36mMisc.mainloop\u001B[0;34m(self, n)\u001B[0m\n\u001B[1;32m   1456\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mmainloop\u001B[39m(\u001B[38;5;28mself\u001B[39m, n\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0\u001B[39m):\n\u001B[1;32m   1457\u001B[0m     \u001B[38;5;124;03m\"\"\"Call the mainloop of Tk.\"\"\"\u001B[39;00m\n\u001B[0;32m-> 1458\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtk\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmainloop\u001B[49m\u001B[43m(\u001B[49m\u001B[43mn\u001B[49m\u001B[43m)\u001B[49m\n",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-04-17 14:33:58.095 python[84919:946604] TSM AdjustCapsLockLEDForKeyTransitionHandling - _ISSetPhysicalKeyboardCapsLockLED Inhibit\n"
      ]
     }
    ],
@@ -1194,44 +1210,34 @@
     "\n",
     "# Start the main event loop\n",
     "root.mainloop()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-28T05:24:35.119727Z",
-     "start_time": "2023-12-28T02:54:19.508763Z"
-    }
-   },
-   "id": "faa7c6d3576dadeb"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1a277dbf32e8cc4b",
+   "metadata": {},
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "1a277dbf32e8cc4b"
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
